--- a/README
+++ b/README
@@ -8,18 +8,14 @@
 
 The partition function of the ferromagnetic RP^(N-1) model is written as
 
-Z=exp(-\beta * E)
-
-where
-
-E =\sum_{x,\mu} [ U_{x,\mu}^2 - 2U_{x,\mu} * phi_{x}^t\cdot \phi_{x+\mu} ]
+Z=exp(\sum_{x,\mu} [ - U_{x,\mu}^2/beta + 2 U_{x,\mu} * phi_{x}^t\cdot \phi_{x+\mu} ] )
 
 where U_{x,\mu} are real numbers associated to links, and \phi_{x} are R^N
 vectors associated to link which satisfy the constraint \|\phi_{x}\|=1.
 
-This form of the energy is equivalent to the more standard
+This form of the action is equivalent to the more standard
 
-E = - \sum_{x,\mu} ( phi_{x}^t\cdot \phi_{x+\mu} )^2
+Z = exp( \beta * \sum_{x,\mu} [ phi_{x}^t\cdot \phi_{x+\mu} ]^2 )
 
 ** CONFIGURE PARAMETERS
 *****************************************************
