--- a/README
+++ b/README
@@ -20,14 +20,14 @@ Z = exp( \beta * \sum_{x,\mu} [ phi_{x}^t\cdot \phi_{x+\mu} ]^2 )
 ** CONFIGURE PARAMETERS
 *****************************************************
 
-The value of N is fixed at configure time by the macro N_c so that to simulate
+The value of N is fixed at configure time by the macro N_f so that to simulate
 the RP^4 model one has to use 
 
-./configure Gauge_Group=SuN N_c=5
+./configure Gauge_Group=SuN N_f=5
 
 The following macro are availbale
 
-N_c         the number of colors (default 2)
+N_f         the number of flavours (default 2)
 Num_threads number of threads to be used in OpenMP (default 1)
 ST_dim      spacetime dimensionality (default 2)
 
