--- a/README
+++ b/README
@@ -6,18 +6,25 @@
 ** ENERGY
 *****************************************************
 
-The partition function is written as
+In rpn.c the partition function is written as
 
-Z = exp( \beta * \sum_{x,\mu} [ phi_{x}^t\cdot \phi_{x+\mu} ]^2 )
+Z = \sum exp( \beta * \sum_{x,\mu} [ phi_{x}^t\cdot \phi_{x+\mu} ]^2 )
 
 where \phi_{x} are R^N vectors associated to sites which satisfy the constraint
 \|\phi_{x}\|=1.
 
 For the ferromagnetic (\beta>0) case this action can be rewritten as
 
-Z=exp(\sum_{x,\mu} [ - U_{x,\mu}^2/beta + 2 U_{x,\mu} * phi_{x}^t\cdot \phi_{x+\mu} ] )
+Z = \sum exp(\sum_{x,\mu} [ - U_{x,\mu}^2/beta + 2 U_{x,\mu} * phi_{x}^t\cdot \phi_{x+\mu} ] )
 
 where U_{x,\mu} are real numbers associated to links.
+
+
+In rpn_z2.c the partition function is
+
+Z = \sum exp( \beta * \sum_{x,\mu} [ phi_{x}^t\cdot \phi_{x+\mu} * U_{x,\mu}] )
+
+where U_{x,\mu} can be either +1 or -1
 
 ** CONFIGURE PARAMETERS
 *****************************************************
