--- a/README
+++ b/README
@@ -22,9 +22,18 @@ where U_{x,\mu} are real numbers associated to links.
 
 In rpn_z2.c the partition function is
 
-Z = \sum exp( \beta * \sum_{x,\mu} [ phi_{x}^t\cdot \phi_{x+\mu} * U_{x,\mu}] )
+Z = \sum exp( - \beta S)
 
-where U_{x,\mu} can be either +1 or -1
+with
+
+S = -\sum_{x,\mu} [ phi_{x}^t\cdot \phi_{x+\mu} * U_{x,\mu}] )
+    -\gamma\sum_{plaq} Plaq(U)
+
+where U_{x,\mu} are link variables that can be either +1 or -1
+and Plaq(U) stands for the the product of the four U variables 
+around a plaquette.
+
+In on_z2bc.c a O(N) model with annealed Z_2 links across the boundaries.
 
 
 ** CONFIGURE PARAMETERS
@@ -38,12 +47,7 @@ the RP^4 model one has to use
 The following macro are availbale
 
 N_f         the number of flavours (default 2)
-Num_threads number of threads to be used in OpenMP (default 1)
 ST_dim      spacetime dimensionality (default 2)
-
-and the use of OpenMP can by activated by using 
-
---enable-use-openmp     to enable the use of openmp
 
 After the configuration, the compilation is performed as usual by
 make
